<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geotask_app"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/edtTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_uma_tarefa"/>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_tarefa"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnLocalizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ver_localizacao"/>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informa_es"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"/>

    <ListView
        android:id="@+id/listTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>

</LinearLayout>